--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                         <nav class="main-menu">
                            <ul class="menu-area-main">
                               <li class="active"> <a href="index.html">Home</a> </li>
-                              <li> <a href="about.html">About</a> </li>
-                              <li> <a href="product.html">product</a> </li>
+                              <li> <a href="link/about.html">About</a> </li>
+                              <li> <a href="link/product.html">product</a> </li>
                               <!-- <li> <a href="blog.html"> Blog</a> </li> -->
                               <li> <a href="https://api.whatsapp.com/send?phone=6281223401517">Contact</a> </li>
                              
